Step 1 of huge update

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<mainClass>${project.groupId}.${project.name}.${project.name}Plugin</mainClass>
-		<spoutVersion>dev-SNAPSHOT</spoutVersion>
+		<spoutVersion>1.0.0-SNAPSHOT</spoutVersion>
 	</properties>
 
 	<repositories>
@@ -28,7 +28,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.spout</groupId>
-			<artifactId>spoutapi</artifactId>
+			<artifactId>spout-api</artifactId>
 			<version>${spoutVersion}</version>
 			<scope>provided</scope>
 		</dependency>
