--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<name>buddies</name>
+	<name>Buddies</name>
 	<groupId>me.man_cub</groupId>
-	<artifactId>Buddies</artifactId>
+	<artifactId>buddies</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<inceptionYear>2012</inceptionYear>
 	<description>A remake of the classic Team Buddies game.</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<mainClass>${project.groupId}.${project.name}.${project.name}Plugin</mainClass>
+		<mainClass>${project.groupId}.${project.artifactId}.${project.name}Plugin</mainClass>
 		<spoutVersion>1.0.0-SNAPSHOT</spoutVersion>
 	</properties>
 
